maze.randommouse.RandomMouseMaze.scala.error
Compilation error:
RandomMouseMaze:13: error: not found: value estFaceMur
    case 2 && !estFaceMur() => avance()
               ^RandomMouseMaze:13: error: not found: value &&
    case 2 && !estFaceMur() => avance()
           ^RandomMouseMaze:13: error: not found: value !
    case 2 && !estFaceMur() => avance()
              ^