maze.randommouse.RandomMouseMaze.scala.code
override def run() {
	while(!estSurBiscuit())
  	avhasard()
  prendBiscuit()
}

def avhasard(){
  var i=random3()
  i match {
    case 0 => droite() 
    case 1 => gauche()
    case 2 && !estFaceMur() => avance()
  }
}